--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,13 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  animation: App-logo-spin infinite 5s linear;
+  height: 5vmin;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,6 +21,12 @@
 .App-link {
   color: #61dafb;
 }
+
+h1{
+  color: green;
+  font-size: 2em;
+}
+
 
 @keyframes App-logo-spin {
   from {
